www/card.css
:root {
    --white-smoke: #F5F5F5;
    --timerwolf: #D3D3D3;
    --silver: #A9A9A9;
    --dim-gray: #636363ff;
    --eerie-black: #1C1C1C;

    --sunset: #f5d39d;
    --lion: #c09a61;
    --coyote: #85633cff;
    --caf-noir: #4a2c16;

    --purpureus: #9b59b6ff;
    --eminence: #6c3483ff;
    --palatinate: #52154eff;

    --azul: #246eb9;
    --dark-pastel-green: #4cb944;
    --tomato: #f06543;

}


body {
    font-family: "Libre Baskerville", serif;
    font-weight: 400;
    font-style: normal;
    font-size: 13pt;
    background-color: black;
    background-image: url('desk.jpeg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-position: center bottom;
    margin: 0;
    padding: 0;
}

:root {
    scroll-behavior: smooth;
    scroll-padding-top: 50px;
    scroll-padding-bottom: 20px;
    scrollbar-color: var(--lion) transparent;
}

body.results {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

body.story {
    padding: 20px;
}

body.search {
    padding: 60px;
}

.results .card {
    margin: 30px;
    width: 300px;
    height: 500px;
    background: linear-gradient(to bottom, var(--lion), var(--caf-noir));
    border-radius: 16px;
    border: 16px ridge var(--sunset);
    position: relative;
    color: var(--white-smoke);
    /*font-family: Arial, sans-serif;*/
    box-shadow: 0px 0px 20px #21211c;
    display: flex;
    flex-direction: column;
}

.card {
    display: block;
    margin: 30px auto;
    min-width: 300px;
    max-width: 600px;
    background: linear-gradient(to bottom, var(--lion), var(--caf-noir));
    border-radius: 16px;
    border: 16px ridge var(--sunset);
    position: relative;
    color: var(--white-smoke);
    font-family: Arial, sans-serif;
    text-align: justify;
    box-shadow: 0px 0px 20px #21211c;
}

.search .card {
    margin: 50px auto;
}

.card:not(:has(*)) {
    display: none;
}

.input {
    margin: 0;
    display: flex;
    align-items: center;
    font-family: "League Spartan", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    background-color: #1D1C0E;
    padding: 10px;
    font-size: 1.5rem;
}

.input + * {
    border-top: 10px ridge var(--sunset);
}

.input::before {
    content: "";
    display: block;
    background-image: url('icons/chevron-right-solid.svg');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
    width: 1em;
    height: 1em;
    font-size: 2rem;
    margin-right: 10px;
}

.input:has(input[data-type=char])::before {
    background-image: url('icons/keyboard-solid.svg');
}

.search .input {
    width: calc(100% - 20px);
}

.search .input::before {
    background-image: url('icons/magnifying-glass-solid.svg');
}

.input-control form::after {
    content: "";
    display: block;
    background-image: url('icons/microphone-solid.svg');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
    width: 1em;
    height: 1em;
    font-size: 2rem;
    margin-left: 10px;
}

.input-control form input {
    font-family: "League Spartan", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    font-size: 1.5rem;
    background-color: transparent;
    color: var(--white-smoke);
    text-align: left;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 100%;
    border: none;
    margin: 0;
    outline-width: 0;
    outline-style: none;
}

.cards .input::before {
    display: none;
}

.cards form label {
    display: block;
}

.cards form {
    display: block;
}

.cards form input {
    font-family: "League Spartan", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: 1.5rem;
    background-color: transparent;
    color: var(--white-smoke);
    border: none;
    margin: 0;
    outline-width: 0;
    outline-style: none;
}

.cards .description {
    border: none;
}

.cards.results {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.rating {
    position: absolute;
    top: -8px;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    height: 40px;
    width: 40px;
    line-height: 40px;
    text-align: center;
    font-weight: bold;
    color: var(--white-smoke);
}

.rating:before {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    transform: rotateX(45deg) rotateZ(45deg);
    background-color: var(--caf-noir);
    z-index: -1;
}

.rating:after {
    position: absolute;
    top: -4px;
    left: -4px;
    content: '';
    height: calc(100% - 12px);
    width: calc(100% - 12px);
    border: 10px ridge var(--sunset);
    transform: rotateX(45deg) rotateZ(45deg);
}

.image {
    flex-shrink: 0;
    object-fit: contain;
    width: 100%;
    background-color: #000;
    background-image: url("/icons/loader.svg");
    background-size: 100px 100px;
    background-position: center;
    background-repeat: no-repeat;
}

.scene .image, .cards .image {
    width: 100%;
    height: 50%;
    display: block;
    aspect-ratio: 1/1;
}

.title, div.header:first-child, div.subheader:first-child, img + div.header, img + div.subheader, div.suggestions {
    font-family: "League Spartan", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    padding: 10px;
    background-color: var(--eerie-black);
    color: var(--white-smoke);
    border-top: 10px ridge var(--sunset);
    border-bottom: 10px ridge var(--sunset);
}

.title, div.header:first-child, div.subheader:first-child, img + div.header, img + div.subheader {
    font-size: 1.5rem;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.title:first-child, div.header:first-child, div.subheader:first-child, div.suggestions:first-child {
    border-top: none;
}

.title:last-child, div.header:last-child, div.subheader:last-child, div.suggestions:last-child {
    border-bottom: none;
}

.span.header, span.subheader {
    font-weight: 700;
}

.window.buffer x-instruction {
    cursor: pointer;
    font-weight: 700;
}

.buffer x-instruction:hover {
    text-decoration: underline;
}

div.suggestions {
    margin-top: 10px;
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
}

div.suggestions x-instruction {
    border: 2px solid var(--white-smoke);
    border-radius: 7px;
    padding: 6px 7px 6px 6px;
    display: inline-block;
}

div.suggestions x-instruction:hover {
    text-decoration: none;
    background-color: var(--white-smoke);
    color: var(--eerie-black);
}

div.suggestions::before {
    content: "";
    display: inline-block;
    background-image: url('icons/lightbulb-regular.svg');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
    height: 32px;
    width: 24px;
}
.emphasized {
    font-style: italic;
}

@layer defaults {
    .buffer > .card > div {
        padding: 10px 10px 0 10px;
        hyphens: auto;
        hyphenate-limit-chars: 6 3 2;
    }

    .card > .rating {
        padding: 0;
    }

    .buffer > .card > div:last-child,
    .buffer > .card > .title,
    .buffer > .card > .author,
    .buffer > .card > .input {
        padding-bottom: 10px;
    }
}

.author, .rules {
    flex-grow: 1;
    padding: 10px;
    font-size: 1rem;
    overflow: hidden;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    overflow-y: auto;
    scrollbar-width: thin;
}

.author:has(+ .play), .description:has(+ .play) {
    margin-bottom: 16px;
}

.description, .normal {
    font-size: 1em;
    text-align: justify;
    scrollbar-color: var(--lion) transparent;
    scrollbar-width: thin;
}

.description {
    padding: 10px 10px 10px 10px;
}

.description {
    border-top: 10px ridge var(--sunset);
}

.play {
    font-family: "Cinzel", serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    font-size: 1.3em;
    position: absolute;
    bottom: -8px;
    left: 50%;
    transform: translateX(-50%) translateY(50%);
    height: 30px;
    line-height: 30px;
    text-align: center;
    color: var(--white-smoke);
    background-color: var(--eminence);
    border: 2px solid var(--purpureus);
    border-radius: 40px;
    width: 120px;
    text-transform: uppercase;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
}

.play:not([href]) {
    color: var(--white-smoke);
    background-color: var(--silver);
    border-color: var(--timerwolf);
    cursor: default;
}

.play:after {
    position: absolute;
    top: -10px;
    left: -10px;
    content: '';
    height: calc(100% + 4px);
    width: calc(100% + 4px);
    border: 8px ridge var(--sunset);
    border-radius: 40px;
}

.window.grid {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
}

.grid .card:first-child {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-top: -16px;
}

.grid .card:first-child, .buffer div.preformatted {
    text-align: center;
    white-space: pre;
    font-family: "Inconsolata", monospace;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings: "wdth" 75;
}

